<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SummerPractiseHW</string>

    <string name="label_camera">Camera</string>
    <string name="label_cassette">Cassette</string>
    <string name="label_fashion">Fashion</string>
    <string name="label_music">Music</string>
    <string name="label_headphones">Headphones</string>

    <string name="fragment_camera">Fragment Camera</string>
    <string name="fragment_cassette">Fragment Cassette</string>
    <string name="fragment_fashion">Fragment Fashion</string>
    <string name="fragment_music">Fragment Music</string>
    <string name="fragment_headphones">Fragment Headphones</string>
    <string name="fragment_unknown">Fragment Unknown</string>
    <string name="button_secret">Secret?</string>

</resources>